--- a/CMSv4/Areas/Modulo/Views/AgendamentoIntermodal/ImportarCarga.cshtml
+++ b/CMSv4/Areas/Modulo/Views/AgendamentoIntermodal/ImportarCarga.cshtml
@@ -68,12 +68,14 @@
                 </div>
             </div>
             <div class="col-24 col-md-12 col-lg-9 col-xl-6" id="divAnexoContainerNf">
+                <div id="divArquivosNfContainerNf"></div>
                 <div class="form-group">
+                    <input type="hidden" id="hdfArquivosNfContainerNf" />
                     <label for="" class="form-label">
                         <span class="icon icon-paperclip"></span>
                         Anexar NF-e
                     </label>
-                    <div id="divArquivosNfContainerNf"></div>
+
                     <div id="arquivoNfContainerNf" class="dropzone">
                         <div class="fallback">
                             <input type="file" name="fileNfContainerNf" id="fileNfContainerNf" />
@@ -169,11 +171,11 @@
                     </div>
                     <div class="col-24 col-md-8 col-lg-10 col-xl-8" id="divNfVariosContainerAnexo">
                         <div class="form-group">
+                            <input type="hidden" id="hdfArquivosNfVariosContainerNf" />
                             <label for="" class="form-label">
                                 <span class="icon icon-paperclip"></span>
                                 Anexar NF-e
                             </label>
-                            <div id="divArquivosNfVariosContainerNf"></div>
                             <div id="arquivoNfVariosContainerNf" class="dropzone">
                                 <div class="fallback">
                                     <input type="file" name="fileNfVariosContainer" id="fileNfVariosContainer" />
