--- a/CMSv4/Areas/Modulo/Views/AgendamentoIntermodal/ScriptImportarCarga.cshtml
+++ b/CMSv4/Areas/Modulo/Views/AgendamentoIntermodal/ScriptImportarCarga.cshtml
@@ -119,10 +119,9 @@
 
         $("#divContainerNf").fadeIn("slider");
 
-        //$("#arquivoNfContainerNf").fadeIn("slider");
-        //$("#divArquivosNfContainerNf").fadeOut("slider");
-        //$("#divArquivosNfContainerNf").empty();
-        $("#hdfArquivosNfContainerNf").val('');
+        $("#arquivoNfContainerNf").fadeIn("slider");
+        $("#divArquivosNfContainerNf").fadeOut("slider");
+        $("#divArquivosNfContainerNf").empty();
 
         if ($("#hdfTipoFormulario").val() == 'dta') {
             $("#divNfContainerNf").hide();
@@ -178,8 +177,8 @@
                 '</div>' +
                 '<div class="col-24 col-md-12 col-lg-7 col-xl-7">' +
                 '<div class="form-group">' +
-                '<input type="hidden" id="hdfArquivosVariasNf_1" class="divArquivosVariasNfJQ" />' +
                 '<label for="" class="form-label"><span class="icon icon-paperclip"></span>Anexar NF-e</label>' +
+                '<div id="divArquivosVariasNf_1" class="divArquivosVariasNfJQ" style="border:2px dashed #dee2e6;border-radius:10px;font-size:17px;padding:20px;display:none;"></div>' +
                 '<div class="dropzone" id="arquivoVariosNf_1">' +
                 '<div class="fallback">'+
                 '<input type="file" name="fileVariasNf_1" id="fileVariasNf_1" />' +
@@ -218,10 +217,9 @@
 
         $("#divNfVariosContainer").fadeIn("slider");
 
-        //$("#arquivoNfVariosContainerNf").fadeIn("slider");
-        //$("#divArquivosNfVariosContainerNf").fadeOut("slider");
-        //$("#divArquivosNfVariosContainerNf").empty();
-        $("#hdfArquivosNfVariosContainerNf").val('');
+        $("#arquivoNfVariosContainerNf").fadeIn("slider");
+        $("#divArquivosNfVariosContainerNf").fadeOut("slider");
+        $("#divArquivosNfVariosContainerNf").empty();
 
         var teste = "1";
         $(".listVariosContainerJQ").empty();
@@ -295,7 +293,7 @@
 
     // CLICK NO BOTAO SALVAR EXPORTAÇAO
     $(".btnSalvarCargaJQ").on("click", function (event) {
-        if ($("#hdfArquivosNfContainerNf").val() == '1') {
+        if ($("#divArquivosNfContainerNf").text() != '') {
             $("#mensagem").html("");
 
             if ($('#FormCarga input').hasClass('is-invalid') == false) {
@@ -602,9 +600,9 @@
                 '</div>' +
                 '<div class="col-24 col-md-12 col-lg-7 col-xl-7">' +
                 '<div class="form-group">' +
-                '<input type="hidden" id="hdfArquivosVariasNf_' + maxTotal.toString() + '" class="divArquivosVariasNfJQ" />' +
                 '<label for="" class="form-label">' +
                 '<span class="icon icon-paperclip"></span>Anexar NF-e</label>' +
+                '<div id="divArquivosVariasNf_' + maxTotal.toString() + '" class="divArquivosVariasNfJQ" style="border:2px dashed #dee2e6;border-radius:10px;font-size:17px;padding:20px;display:none;"></div>' +
                 '<div class="dropzone" id="arquivoVariosNf_' + maxTotal.toString() + '">' +
                 '<div class="fallback">' +
                 '<input type="file" name="fileVariasNf_' + maxTotal.toString() + '" id="fileVariasNf_' + maxTotal.toString() + '" />' +
@@ -862,7 +860,7 @@
 
 
     $(".btnSalvarCargaVariosContainerJQ").on("click", function (event) {
-        if ($("#hdfArquivosNfVariosContainerNf").val() == '1') {
+        if ($("#divArquivosNfVariosContainerNf").text() != '') {
             $("#mensagem").html("");
 
             if ($('#FormCargaNfVariosContainer input').hasClass('is-invalid') == false) {
