validação CEP view importação, tratamento arquivo DTA

--- a/CMSv4/Areas/Modulo/Views/AgendamentoIntermodal/Importar.cshtml
+++ b/CMSv4/Areas/Modulo/Views/AgendamentoIntermodal/Importar.cshtml
@@ -142,25 +142,25 @@
                 <div class="col-24 col-md-8 col-lg-12">
                     <div class="form-group">
                         <label for="endereco" class="form-label">@T("Endereço")</label>
-                        <input type="text" class="form-control" required id="endereco" name="Endereco" />
+                        <input type="text" class="form-control" required id="endereco" placeholder="@T("Digite o Endereço")" name="Endereco" />
                     </div>
                 </div>
                 <div class="col-24 col-sm-12 col-md-8 col-lg-6">
                     <div class="form-group">
                         <label for="complemento" class="form-label">@T("Complemento")</label>
-                        <input type="text" class="form-control" id="complemento" name="Complemento" />
+                        <input type="text" class="form-control" id="complemento" placeholder="@T("Digite o Complemento")" name="Complemento" />
                     </div>
                 </div>
                 <div class="col-24 col-sm-12 col-lg-8 col-xl-6">
                     <div class="form-group">
                         <label for="bairro" class="form-label">@T("Bairro")</label>
-                        <input type="text" class="form-control" id="bairro" name="Bairro" />
+                        <input type="text" class="form-control" id="bairro" placeholder="@T("Digite o Bairro")" name="Bairro" />
                     </div>
                 </div>
                 <div class="col-24 col-sm-12 col-lg-8 col-xl-6">
                     <div class="form-group">
                         <label for="cidade" class="form-label">@T("Cidade")</label>
-                        <input type="text" class="form-control" required id="cidade" name="Cidade" />
+                        <input type="text" class="form-control" required id="cidade" placeholder="@T("Digite a Cidade")" name="Cidade" />
                     </div>
                 </div>
                 <div class="col-24 col-sm-12 col-lg-8 col-xl-6">
