--- a/CMSv4/Areas/Modulo/Views/AgendamentoIntermodal/ScriptExportarCarga.cshtml
+++ b/CMSv4/Areas/Modulo/Views/AgendamentoIntermodal/ScriptExportarCarga.cshtml
@@ -102,7 +102,7 @@
                             "<td>" + model.Equipamento + reefer + "</td>" +
                             "<td>" + model.DataColetaFormatada + "</td>" +
                             "<td>" + model.Peso + " kgs" + "</td>" +
-                            "<td><span class='icon icon-coments' data-toggle='tooltip' data-placement='top' title='" + (model.Comentario == null ? '' : model.Comentario) + "'></span> Comentários</td>" +
+            "<td><span class='icon icon-coments' data-toggle='tooltip' data-placement='top' title='" + (model.Comentario == null ? '' : model.Comentario) + "'></span> <span title='" + (model.Comentario == null ? '' : model.Comentario) + "'>Comentários</span></td>" +
                             "<td><a href='#modalConfirmacao' data-toggle='modal'  onClick='excluirCarga(" + model.Codigo + ")' href='javascript:void(0)' class='icon icon-delete'><span class='sr-only'>Delete</span></a></td>" +
                         "</tr>";
 
