--- a/CMSv4/Areas/Modulo/Views/AgendamentoIntermodal/Importar.cshtml
+++ b/CMSv4/Areas/Modulo/Views/AgendamentoIntermodal/Importar.cshtml
@@ -116,7 +116,7 @@
 
 
         <div class="form-section">
-            <h3 class="form-section__title">@T("Local de Coleta")</h3>
+            <h3 class="form-section__title">@T("Local de Entrega")</h3>
             <div class="row">
                 <div class="col-24 col-sm-12 col-lg-8 col-xl-6">
                     <div class="form-group">
